--- a/public/index.html
+++ b/public/index.html
@@ -58,18 +58,7 @@
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
-    >
-      $(document).ready(function(){
-            $('.carousel').carousel();
-          });
-    </script>
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-      $('.button-collapse').sideNav();
-      $('.carousel.carousel-slider').carousel({
-        fullWidth: true,
-        indicators: true,
-      });
-    </script>
   </body>
 </html>
